Wed Jul  4 04:25:14 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/Makefile.am: Added liebert-hid.h to headers variable; should fix
   build failures of previous commit.
 - scripts/subdriver/path-to-subdriver.sh: Added instructions to
   update above variable.

Tue Jul  3 23:26:55 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/liebert-hid.*: first cut at Liebert HID subdriver

Tue Jul  3 23:15:54 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - scripts/subdriver/path-to-subdriver.sh: remove old instructions to
   run 'make depend', and change to "HIDDevice_t"

Mon Jul  2 14:47:14 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-hid.c: fix battery.type (static data)
 - configure.in, libupsclient.pc: add some missing variables useful
   for external NUT applications (sysconfdir, statepath, nutuser)
 - hal/20-ups-nut-device.fdi: update unknow manufacturer name

Fri Jun 29 07:19:42 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - libhid.c: fix Notification handling. It previously caused
   false online / on battery fluctuation with newhidups / usbhid-ups
   when no notification was received.

Tue Jun 26  9:16:12 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - configure.in: set HAL support default value to "no". Enabling
   HAL support must now be explicitly asked.

Mon Jun 25 14:46:45 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - INSTALL, README, UPGRADING, docs/configure.txt, docs/nut-hal.txt:
   upgrade various documentation to reflect the changes, most of all
   on the HAL side.

Mon Jun 25 19:21:55 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-drivers.txt: Update to reflect changes in the way we
   deal with dstate_dataok() and dstate_datastale(). Historically
   it was needed to call these regularly, to prevent staleness
   warnings. This is no longer needed, now the server will PING
   drivers it has not heard of recently. If they answer with PONG,