@@ -15,6 +15,8 @@ libhidups      0x0003      0x0764   0x0005    0x0000       0x0000       0x00    
 libhidups      0x0003      0x0764   0x0501    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Mustek Powermust 600USB (OMRON/87XXUPS)
 libhidups      0x0003      0x06da   0x0003    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+# LIEBERT/PowerSure Personal XT
+libhidups      0x0003      0x06da   0xffff    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Cypress Semiconductor USB to Serial
 libhidups      0x0003      0x0665   0x5161    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Powercom USB 
